k8s/frontend-blue.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-blue
  namespace: capstone-project
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app
      version: blue
  template:
    metadata:
      labels:
        app: app
        version: blue
    spec:
      containers:
        - name: backend
          image: REPLACE_WITH_IMAGE
          ports:
            - containerPort: 3000
