k8s/frontend-green.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-green
  namespace: capstone-project
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app
      version: green
  template:
    metadata:
      labels:
        app: app
        version: green
    spec:
      containers:
        - name: frontend
          image: REPLACE_WITH_IMAGE
          ports:
            - containerPort: 3000
          readinessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 30
            periodSeconds: 5
            failureThreshold: 6
          livenessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 30
            periodSeconds: 20
