k8s/backend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: capstone-project
spec:
  type: LoadBalancer
  selector:
    app: backend
    version: green
  ports:
  - port: 3000
    targetPort: 3000
