k8s/frontend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-lb
  namespace: capstone-project
spec:
  type: LoadBalancer
  selector:
    app: app
    version: green
  ports:
  - port: 80
    targetPort: 3000
