k8s/mysql-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: capstone-project
spec:
  ports:
    - port: 3306
      targetPort: 3306
  selector:
    app: mysql
